filter fix
Исправил фильтры, почистил код, обновил документацию
